--- a/DuAn1_JAVA/nbproject/private/private.properties
+++ b/DuAn1_JAVA/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\trung\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\hoanh\\AppData\\Roaming\\NetBeans\\17\\build.properties
