--- a/DuAn1_JAVA/nbproject/project.properties
+++ b/DuAn1_JAVA/nbproject/project.properties
@@ -37,7 +37,9 @@ file.reference.mssql-jdbc-9.4.1.jre16.jar=D:\\DuAn1_Java_PTPM\\Du_an_1\\DuAn1Nho
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-9.4.1.jre16.jar}
+    ${file.reference.mssql-jdbc-9.4.1.jre16.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${reference.HyperBeast1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,6 +80,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.HyperBeast1=../../bean/duan1(duyKhai)/HyperBeast-main
+reference.HyperBeast1.jar=${project.HyperBeast1}/dist/HyperBeast1.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
