--- a/DuAn1_JAVA/nbproject/private/private.properties
+++ b/DuAn1_JAVA/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\hoanh\\AppData\\Roaming\\NetBeans\\17\\build.properties
+file.reference.mssql-jdbc-9.4.1.jre16.jar=D:\\Documents\\FPOLY\\DA1_PRO1041\\mssql-jdbc-9.4.1.jre16.jar
+user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\19\\build.properties
