--- a/DuAn1_JAVA/nbproject/private/private.properties
+++ b/DuAn1_JAVA/nbproject/private/private.properties
@@ -1,3 +1,8 @@
 compile.on.save=true
-file.reference.mssql-jdbc-9.4.1.jre16.jar=D:\\Documents\\FPOLY\\DA1_PRO1041\\mssql-jdbc-9.4.1.jre16.jar
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\19\\build.properties
