--- a/DuAn1_JAVA/nbproject/project.properties
+++ b/DuAn1_JAVA/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=DuAn1_JAVA
-application.vendor=hoanh
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -33,13 +32,13 @@ dist.jar=${dist.dir}/DuAn1_JAVA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1_JAVA
-endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-12.2.0.jre11.jar=D:\\library\\sqljdbc_12.2.0.0_enu\\sqljdbc_12.2\\enu\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.mssql-jdbc-12.2.0.jre11.jar=D:\\Java3\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.mssql-jdbc-9.4.1.jre16.jar=D:\\DuAn1_Java_PTPM\\Du_an_1\\DuAn1Nhom3\\mssql-jdbc-9.4.1.jre16.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mssql-jdbc-9.4.1.jre16.jar}:\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
