--- a/DuAn1_JAVA/nbproject/project.properties
+++ b/DuAn1_JAVA/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/DuAn1_JAVA
 endorsed.classpath=
 excludes=
 file.reference.mssql-jdbc-12.2.0.jre11.jar=C:\\Users\\trung\\Downloads\\sqljdbc_12.2.0.0_enu\\sqljdbc_12.2\\enu\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.mssql-jdbc-12.2.0.jre11.jar-1=D:\\library\\sqljdbc_12.2.0.0_enu\\sqljdbc_12.2\\enu\\mssql-jdbc-12.2.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
