--- a/DuAn1_JAVA/nbproject/project.properties
+++ b/DuAn1_JAVA/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=DuAn1_JAVA
-application.vendor=trung
+application.vendor=hoanh
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -35,13 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1_JAVA
 endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-12.2.0.jre11.jar=C:\\Users\\trung\\Downloads\\sqljdbc_12.2.0.0_enu\\sqljdbc_12.2\\enu\\mssql-jdbc-12.2.0.jre11.jar
-file.reference.mssql-jdbc-12.2.0.jre11.jar-1=D:\\library\\sqljdbc_12.2.0.0_enu\\sqljdbc_12.2\\enu\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.mssql-jdbc-12.2.0.jre11.jar=D:\\library\\sqljdbc_12.2.0.0_enu\\sqljdbc_12.2\\enu\\mssql-jdbc-12.2.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
-    ${file.reference.mssql-jdbc-12.2.0.jre11.jar-1}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
